...
                                <subviews>
                                    <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" spacing="10" translatesAutoresizingMaskIntoConstraints="NO" id="7XC-A9-qM9">
                                        <rect key="frame" x="0.0" y="0.0" width="374" height="172"/>
                                        <subviews>
                                            <textField opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" placeholder="Habit Title" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="STO-4c-DOZ">
                                                <rect key="frame" x="0.0" y="0.0" width="374" height="34"/>
                                                <accessibility key="accessibilityConfiguration" identifier="Habit.Name"/>
                                                <constraints>
                                                    <constraint firstAttribute="height" constant="34" id="UiN-xM-Ab6"/>
                                                </constraints>
                                                <fontDescription key="fontDescription" type="system" pointSize="14"/>
                                                <textInputTraits key="textInputTraits"/>
                                            </textField>
                                            <stackView opaque="NO" contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="3sc-Uy-NC4">
                                                <rect key="frame" x="0.0" y="44" width="374" height="128"/>
                                                <subviews>
                                                    <textView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" textAlignment="natural" translatesAutoresizingMaskIntoConstraints="NO" id="68f-3h-bXx">
                                                        <rect key="frame" x="0.0" y="0.0" width="374" height="128"/>
                                                        <color key="backgroundColor" systemColor="systemBackgroundColor" cocoaTouchSystemColor="whiteColor"/>
                                                        <accessibility key="accessibilityConfiguration" identifier="Habit.Description"/>
                                                        <constraints>
                                                            <constraint firstAttribute="height" constant="128" id="3cH-u1-YpH"/>
                                                        </constraints>
                                                        <color key="textColor" systemColor="labelColor" cocoaTouchSystemColor="darkTextColor"/>
                                                        <fontDescription key="fontDescription" type="system" pointSize="14"/>
                                                        <textInputTraits key="textInputTraits" autocapitalizationType="sentences"/>
...
                                        </constraints>
                                    </datePicker>
                                </subviews>
                            </stackView>
                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="rha-TL-umU">
                                <rect key="frame" x="20" y="626" width="374" height="45"/>
                                <state key="normal" title="Save"/>
                                <connections>
                                    <action selector="saveTapped:" destination="IvX-d2-00i" eventType="touchUpInside" id="KiC-Je-dtQ"/>
                                </connections>
                            </button>
                            <tableView clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="-1" estimatedRowHeight="-1" sectionHeaderHeight="28" sectionFooterHeight="28" translatesAutoresizingMaskIntoConstraints="NO" id="vUb-wO-Sm2" customClass="NavigationMenuView" customModule="Habit_Tracker" customModuleP
                                <rect key="frame" x="414" y="0.0" width="207" height="736"/>
...
