...
                        </prototypes>
                        <connections>
                            <outlet property="dataSource" destination="a36-em-2N6" id="ESg-ha-ulI"/>
                            <outlet property="delegate" destination="a36-em-2N6" id="pfh-9H-T2J"/>
                        </connections>
                    </tableView>
                    <navigationItem key="navigationItem" title="My Habits" id="4JP-fa-CLi">
                        <barButtonItem key="leftBarButtonItem" image="gear" catalog="system" id="FGe-ob-zXl">
                            <connections>
                                <segue destination="VS5-dU-XiJ" kind="presentation" id="AgH-7q-Dhx"/>
                            </connections>
                        </barButtonItem>
                        <barButtonItem key="rightBarButtonItem" systemItem="add" id="1ed-Xk-fya">
...
            <point key="canvasLocation" x="1538" y="-133"/>
        </scene>
        <!--Habits-->
        <scene sceneID="zrS-gf-QjO">
            <objects>
                <navigationController automaticallyAdjustsScrollViewInsets="NO" id="p0Q-EU-pCD" sceneMemberID="viewController">
                    <tabBarItem key="tabBarItem" title="Habits" image="square.and.pencil" catalog="system" id="RKw-9p-hnu"/>
                    <toolbarItems/>
                    <navigationBar key="navigationBar" contentMode="scaleToFill" insetsLayoutMarginsFromSafeArea="NO" largeTitles="YES" id="Ufa-5l-4yd">
                        <rect key="frame" x="0.0" y="44" width="414" height="96"/>
                        <autoresizingMask key="autoresizingMask"/>
                    </navigationBar>
                    <nil name="viewControllers"/>
...
